fix: overflow image

--- a/src/pages/CoreValues/styles.css
+++ b/src/pages/CoreValues/styles.css
@@ -43,6 +43,10 @@
     border: 0;
 }
 
-.coreValues__image {
+.coreValues__imageContainer {
     text-align: right;
+}
+
+.coreValues__image {
+    max-width: 100%;
 }
